# corpuslint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
.superpowers/sdd/: progress.md
docs/: demo-llamaindex-2026-07-07.md
src/corpuslint/: __init__.py  analyze.py  chunker.py  cli.py  config.py  embedder.py  llm.py  llm_clients.py  loader.py  mcp_server.py  models.py  report.py  scoring.py  similarity.py  tokenize.py
src/corpuslint/checks/: __init__.py  base.py  chunk_size.py  contradictions.py  embedding_outliers.py  exact_duplicates.py  low_information.py  near_duplicates.py
src/corpuslint/sources/: __init__.py  azure_search.py  base.py  confluence.py  files.py  notion.py  s3.py  sharepoint.py  web.py
tests/: conftest.py  test_acceptance.py  test_analyze.py  test_azure_search.py  test_chunker.py  test_cli.py  test_config.py  test_confluence.py  test_embedder.py  test_files_source.py  test_llm_clients.py  test_loader.py  test_mcp_server.py  test_models.py  test_notion.py  test_packaging.py  test_report.py  test_s3.py  test_scoring.py  test_sharepoint.py  test_smoke.py  test_source_registry.py  test_web.py
tests/checks/: test_contradictions.py  test_embedding_outliers.py  test_exact_duplicates.py  test_near_duplicates.py  test_structural.py
tests/fixtures/corpus/: good.md  symbols.md
