[project]
name = "corpuslint"
version = "0.1.0"
description = "A linter for your RAG knowledge base"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["numpy>=1.26", "pyyaml>=6.0", "typer>=0.12", "rich>=13.7"]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
corpuslint = "corpuslint.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corpuslint"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
