[project]
name = "corpuslint"
version = "0.1.0"
description = "A linter for your RAG knowledge base"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Timo Haldi" }]
keywords = [
    "rag",
    "llm",
    "embeddings",
    "vector-search",
    "retrieval",
    "data-quality",
    "linter",
    "nlp",
    "knowledge-base",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.26", "pyyaml>=6.0", "typer>=0.12", "rich>=13.7"]

[project.urls]
Homepage = "https://github.com/mediapuls/corpuslint"
Repository = "https://github.com/mediapuls/corpuslint"
Issues = "https://github.com/mediapuls/corpuslint/issues"

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
llm = ["openai>=1.0"]
azure = ["azure-search-documents>=11.4"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
corpuslint = "corpuslint.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corpuslint"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
